client/app/css/main.css
/* ... */
#PrivacyBadge {
  background-color: #1d1f24;
  color: #fff;
}

.tab-content {
  padding-top: 1em;
}

.preformatted {
  white-space: pre-wrap;
}

.badge-warning-custom{
  padding: .25em .4em;
  text-align: center;
  border-radius: .25rem;
}

.wb-image-upload{
  height: 10.4rem;
  max-width: 20.4rem;
  max-height: 9.5rem;
  min-width: 10.4rem;
  padding: 10px 10px 20px;
  object-fit: contain;
}

.logo-image {
  border: 1px dashed #c8d1e0;
  height: 10.4rem;
  max-width: 20.4rem;
  max-height: 10rem;
  min-width: 10.4rem;
  padding: 10px 10px 20px;
  object-fit: contain;
  border-radius: 5px;
}

.logo-image-empty{
  border: 1px dashed #c8d1e0;
  position: relative;
  z-index: 0;
  height: 10.4rem;
  width: 10.4rem;
  text-align: left;
  margin: 0;
  border-radius: 5px;
  padding: 0;
}

.image-upload {
  position: relative;
  z-index: 0;
  height: 10.4rem;
  min-height: 10.4rem;
  text-align: left;
  width: auto;
  margin: 0 auto;
}

.image-upload .change-picture-button {
  position: absolute;
  bottom: 1rem;
  text-align: center;
  z-index: 10;
}

.image-thumbnail,
.image-upload-thumbnail,
.image-upload-thumbnail img {
  height: 10rem;
  width: 10rem;
}

.image-upload-thumbnail img {
  vertical-align: middle;
  text-align: center;
  z-index: 1;
}

.login-error-box-homepage {
  display: inline-block;
  margin: 1em;
}

.login-form {
  min-width: 320px;
}

.large-close-button {
  font-size: 24px;
  padding: 10px;
}

.custom-close-button {
  font-size: 23px;
  font-weight: bold;
  color: #737373;
  background: #0000;
  border: none;
  position: absolute;
  right: 10px;
  top: 0;
}

.alert-danger-console{
  color: black;
  border: 1px solid #c8d1e0;
}

.recovery-key-input {
  width: 64rem;
  text-align: center;
}

.nested {
  padding-left: 1em;
  padding-right: 1em;
}

.file-preview {
  position: relative;
  height: 12rem;
}

.file-upload {
  position: absolute;
  top: 0;
  z-index: 100;
  height: 10rem;
  width: 10rem;
  text-align: right;
  line-height: 1rem;
  border: 1px solid #c8d1e0;
  padding-bottom: 9rem
}

.file-upload-icon {
  font-size: 2rem;
  padding: 60px 60px 67px;
}

.file-upload-progress {
  margin-top: 0;
}

.progress {
  border-radius: 4px;
}

.message,
.message-whistle-blower {
  padding: 1em;
  border: 1px solid #c8d1e0;
}

.table {
  --bs-table-striped-bg: #f5f7fa;
}

#LogoBox img {
  max-height: 5rem;
  max-width: 20rem;
  margin: 0;
}

#Toolbar {
  margin-bottom: 1em;
}

.modal-title {
  font-size: 1.4rem;
}

#TipList table {
  table-layout: auto;
}

th:not(:first-child, :nth-last-child(-n+4)) {
  cursor: pointer;
}

#TipList th,
#TipList td {
  white-space: nowrap;
}

@keyframes fade-inout {
  0%,
  100% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }
}

.file-info-row {
  margin-top: 1em;
}

.whistle-blower-file .top-row {
  min-height: 30px;
}

.disabled-interface {
  pointer-events: none;
  user-select: none;
  opacity: 0.6;
}

.audio-box {
  position: relative;
  border: 1px solid #f5f7fa;
  background-color: #f5f7fa;
  border-radius: 5px;
  padding: 0.5em;
  display: flex;
  flex-direction: column;
}

.audio-player {
  background: #f5f7fa;
  border-radius: 50px;
  margin: 1em;
  border: 1px solid #1d1f24;
  max-width: 90%
}

.audio-player-wrapper[disabled] .audio-player{
  opacity: 0.5;
}

textarea.form-control {
  resize: vertical;
}

.fa-none::before {
  content: "\2122";
  color: transparent;
}

.sup {
  vertical-align: super;
  font-size: smaller;
}

.PageContent {
  flex: 1 0 auto;
}

@media screen and (min-width >= 768px) {
  .modal-lg .modal-dialog {
    width: 600px;
  }
}

.hidden {
  display: none;
}

.modal-dialog {
  max-width: 900px;
}

.drag-drop {
  padding: 1em;
  background-color: #f5f7fa;
  border: 1px solid #c8d1e0;
}

.drag-drop:hover {
  background-color: #fff;
  border-style: dashed;
}

.custom-file {
  width: auto;
}

label,
p:last-child {
  margin: 0;
}

#HomePageBox {
  text-align: center;
  margin: 0 auto;
}

.language-box {
  width: 190px;
}

.language-box-extended {
  width: 290px;
}

#WhistleblowerSubmitBox {
  margin-bottom: 2em;
}

.question .question {
  padding-left: 1em;
}

#WhistleblowingQuestion {
  white-space: pre-wrap;
}

#WhistleblowerSubmitBox,
#WhistleblowerLoginBox {
  text-align: center;
}

.description {
  color: #1d1f2a;
  white-space: pre-wrap;
}

.select-card {
  cursor: pointer;
  margin-bottom: 1em;
  padding: 1em;
  background-color: #fff;
  border: 1px solid #c8d1e0;
  border-radius: 5px;
}

.select-card:hover,
.select-card.selected {
  background-color: #fffcf1;
}

.select-card.disabled {
  background-color: #f2dede;
}

[dir="ltr"] .select-card  {
  text-align: left;
}

[dir="rtl"] .select-card  {
  text-align: right;
}

.field-answer-entry {
  margin-top: 0.5em;
}

#OTPSecretForm input {
  width: 26rem;
  text-align: center;
}

.field-answer-entry-label::after {
  content: "";
  display: block;
  clear: both;
}

#MaxSelectableReceiverBox {
  margin-bottom: 1em;
}

.form-control.is-valid,
.form-control.is-valid:focus,
.was-validated .form-control:valid,
.was-validated .form-control:focus {
  color: inherit;
  border-color: inherit;
  box-shadow: inherit;
  background-image: none;
}

.step-index {
  display: inline-block;
  color: #c8d1e0;
  width: 1.8rem;
  height: 1.8rem;
  padding: 0.2rem 0;
  border: 1px solid #c8d1e0;
  border-radius: 50%;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
}

.step-index,
#SubmissionButtons button {
  margin-right: 10px;
}

.step-index-selected {
  color: #fff;
  background-color: #377abc;
  border-color: #377abc;
}

#SubmissionErrors {
  margin-top: 1em;
}

.question-body {
  padding-bottom: 0.5em;
}

.file-buttons {
  position: absolute;
  top: 0;
  z-index: 666;
  height: 10rem;
  width: 10rem;
  padding: 0.6em;
}

.config-section {
  margin-bottom: 1em;
}

.config-item {
  border: 1px solid #c8d1e0;
  padding: 1em;
  margin: 1em auto;
}

#HeaderBox h1 {
  margin: 0;
  padding: 0;
  font-size: 100%;
  font-weight: bold;
}
/* ... */

